Spacing, text size and scrolling fixes

--- a/src/components/Features/features.css
+++ b/src/components/Features/features.css
@@ -15,3 +15,33 @@
 .space-squiggle {
   padding-top: 10px;
 }
+
+.townesquare-text-base {
+  font-family: Outfit;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 34px;
+}
+
+.contextual-title {
+  font-family: Outfit;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 50px; 
+  padding-bottom: 16px;
+}
+
+.phone-padding-screen2 {
+  position: relative;
+  left: 45px;
+}
+
+.feature-text-seperator {
+  min-height: 32px;
+}
+
+.feature-contextual-title-left-padding {
+  padding-left: 25px;
+}
